# quantum-protein-folding

./: README.md  pyproject.toml  tox.ini
docs/: protein_folding.ipynb
src/protein_folding/: __init__.py  protein_folding_problem.py  protein_folding_result.py
src/protein_folding/utils/: __init__.py  protein_plotter.py  protein_shape_decoder.py  protein_shape_file_gen.py
test/: test_protein_folding_problem.py  test_protein_folding_result.py  test_qubit_op_builder.py
test/bead_contacts/: test_contact_map_builder.py
test/bead_distances/: test_distance_map.py  test_distance_map_builder.py
test/data_loaders/: test_energy_matrix_loader.py
test/interactions/: test_mixed_interaction.py  test_miyazawa_jernigan_interaction.py  test_random_interaction.py
test/peptide/: test_peptide.py
test/peptide/beads/: test_bead_main.py  test_bead_side.py
test/peptide/chains/: test_chain_main.py  test_chain_side.py
test/qubit_utils/: test_qubit_fixing.py  test_qubit_number_reducer.py
test/utils/: test_protein_decoder.py  test_protein_shape_file_gen.py
